Fixed button-group for rtl. Fixed search button-group. Fixed calendar test spacing. Added flip direction button to test.

--- a/src/styl/input/button-group.styl
+++ b/src/styl/input/button-group.styl
@@ -38,6 +38,25 @@ focus-tight() {
             border-top-right-radius: $input-border-radius;
             border-bottom-right-radius: $input-border-radius;
         }
+
+        [dir=rtl] &:first-child {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+
+            border-right-width: $input-border-width;
+            border-top-right-radius: $input-border-radius;
+            border-bottom-right-radius: $input-border-radius;
+        }
+        [dir=rtl] &:last-child {
+            border-right-width: 0;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+
+            border-left-width: $input-border-width;
+            border-top-left-radius: $input-border-radius;
+            border-bottom-left-radius: $input-border-radius;
+        }
+
         &:hover {
             z-index: 1;
         }
