--- a/src/styl/input/search.styl
+++ b/src/styl/input/search.styl
@@ -10,9 +10,8 @@ $search-spacing ?= 7px;
     box-shadow: $input-box-shadow-height-0;
     border-radius: $search-border-radius;
 
-    .search-button-group
+    & > .button-group
         display: flex;
-        border: $search-border-width solid $search-border-color;
 
     .search-option-box
         position: absolute;
